css not complete

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  H1 Mini Message Board
+  p Start adding new messages!
+   
+  button Add new message
+
+
