--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,30 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-color: blueviolet;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+p {
+    font-size: 22px;
+}
+
+button {
+    background-color: rgb(214, 36, 36);
+    border: none;
+    outline: none;
+    padding: 0.3rem 0.8rem;
+    cursor: pointer;
+}
+
+button:hover {
+    transform: scale(1.3);
+    transition: 0.2s ease-in-out;
 }
