--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,3 +28,25 @@ button:hover {
     transform: scale(1.3);
     transition: 0.2s ease-in-out;
 }
+
+table {
+    padding: 20px;
+}
+
+th {
+    padding: 20px;
+}
+
+span {
+    font-size: 22px;
+}
+
+#name {
+    margin: 30px;
+    width: 200px;
+}
+
+#msg {
+    width: 300px;
+    height: 80px;
+}
